--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.17.1",
     "@mantine/core": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
+    "embla-carousel-react": "^7.1.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
