--- a/package.json
+++ b/package.json
@@ -12,8 +12,21 @@
     "@mantine/carousel": "^7.17.1",
     "@mantine/core": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
+    "@payloadcms/db-mongodb": "^3.35.1",
+    "@payloadcms/email-resend": "^3.35.1",
+    "@payloadcms/next": "^3.35.1",
+    "@payloadcms/payload-cloud": "^3.35.1",
+    "@payloadcms/richtext-lexical": "^3.35.1",
+    "@payloadcms/storage-s3": "^3.35.1",
+    "@tabler/icons-react": "^3.31.0",
+    "axios": "^1.9.0",
+    "cross-env": "^7.0.3",
+    "dayjs": "^1.11.13",
+    "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
+    "graphql": "^16.11.0",
     "next": "15.2.0",
+    "payload": "^3.35.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
