--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "packaginhub",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:types": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types"
   },
   "dependencies": {
     "@mantine/carousel": "^7.17.1",
@@ -42,5 +44,8 @@
     "eslint-config-next": "15.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "prettier": {
+    "singleQuote": false
   }
 }
